--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,28 +1,28 @@
-name: Node.js CI Workflow
-    on:
-      push:
-        branches: [ main ]
-      pull_request:
-        branches: [ main ]
+name: Vite Build
 
-    jobs:
-      build:
-        runs-on: ubuntu-latest
+on:
+  push:
+    branches: [ main ]
 
-        steps:
-          - name: Checkout code
-            uses: actions/checkout@v4
+jobs:
+  build-vite:
+    runs-on: ubuntu-latest
 
-          - name: Set up Node.js
-            uses: actions/setup-node@v4
-            with:
-              node-version: '20.x' 
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-          - name: Install dependencies
-            run: npm install
-            
-          # NEW STEP: Run Automated Unit Tests
-          - name: Run Unit Tests
-            run: npm test
-            
-          # The previous build verification step can now be removed or replaced.
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+
+      - name: Install Dependencies
+        run: |
+          cd vite-project
+          npm install
+
+      - name: Build Vite Project
+        run: |
+          cd vite-project
+          npm run build
