--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,28 +1,24 @@
-name: Vite Build
+name: ci-cd-pipeline
 
-on:
+on: 
   push:
     branches: [ main ]
 
 jobs:
-  build-vite:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v6.0.1
 
       - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20"
+        uses: actions/setup-node@v6.1.0
+        with:   
+          node-version: 22.x
 
       - name: Install Dependencies
-        run: |
-          cd vite-project
-          npm install
+        run: npm install
 
-      - name: Build Vite Project
-        run: |
-          cd vite-project
-          npm run build
+      - name: build creating
+        run: npm run build
